# axum-starter-kit

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  diesel.toml  docker-compose.yml  run.sh  rustfmt.toml
.github/workflows/: rust.yml
environment/: .env.local  .env.production  .env.staging
guide/: ARCHITECTURE.md  BARREL_PATTERN_GUIDE.md  CONVENTIONS.md  RULES.md  RUST_ARCHITECTURE_SKILL.md
migrations/2024-01-01-000001_initial_schema/: down.sql  up.sql
public/: index.html
src/: config.rs  lib.rs  main.rs  server.rs
src/constants/: config.rs
src/extractors/: auth.rs  body.rs  formdata.rs  mod.rs  path.rs
src/models/: environment.rs  mod.rs  pagination.rs
src/modules/: mod.rs
src/modules/attachment/: controller.rs  doc.rs  mod.rs  model.rs  repository.rs  service.rs
src/modules/auth/: controller.rs  doc.rs  mod.rs  model.rs  repository.rs  service.rs
src/modules/health/: controller.rs  doc.rs  mod.rs
src/modules/user/: controller.rs  doc.rs  mod.rs  model.rs  repository.rs  service.rs
src/schemas/: table.rs
src/services/: cache.rs  http_error.rs  http_response.rs  mod.rs  postgres.rs  sqlite.rs
src/utils/: encrypt.rs  files.rs  generator.rs  generator_account.rs  integer.rs  mod.rs  nric.rs  string.rs  token.rs  validation.rs
tests/: auth_test.rs  health_test.rs  user_test.rs
tests/common/: mod.rs
