[package]
name = "axum-starter"
version = "0.1.0"
edition = "2024"

[dependencies]
# Asynchronous runtime for Rust
tokio = { version = "1.49.0", features = ["full"] }
# Main web framework for building APIs
axum = { version = "0.8", features = ["multipart"] }
# Tower middleware and HTTP utilities for axum
tower = { version = "0.5", features = ["timeout", "buffer", "limit"] }
tower-http = { version = "0.6", features = [
  "trace",
  "cors",
  "fs",
  "request-id",
] }
# JWT Sign and verify (rust_crypto avoids needing a process-level CryptoProvider)
jsonwebtoken = "9"
# JSON serialize and deserialize
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
# Utility to generate uuid
uuid = { version = "1.20.0", features = ["v7"] }

# ORM Database with sqlite

diesel = { version = "2.2", features = ["sqlite", "r2d2", "chrono"] }
diesel_migrations = { version = "2.3", features = ["sqlite"] }
libsqlite3-sys = { version = "0.35.0", features = ["bundled"] }

# ORM Database with postgres
# diesel = { version = "2.3", features = ["r2d2", "postgres"] }
r2d2 = "0.8"
# Error handleing
anyhow = "1"
thiserror = "2"
# Fetcher like fetch or axios
reqwest = { version = "0.13.1", features = ["json"] }

# API Documentation
utoipa = { version = "5.4", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum",  "vendored"] }

# Timestamps for JWT, Snowflake IDs, refresh token expiry
chrono = { version = "0.4", features = ["serde"] }
# Password hashing
argon2 = "0.5"
# Random number generation (0.8.x uses rand_core 0.6, compatible with argon2's password_hash)
rand = "0.8"
# Field validation
validator = { version = "0.19", features = ["derive"] }
# Structured logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

[dev-dependencies]
tempfile = "3"
